настроен автовыбор CDO репозитория (lnx/win). +некоторый рефакторинг.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -110,6 +110,11 @@ jspwiki.fileSystemProvider.pageDir = /home/vfedorov/dev/dev_wiki/Temp/pages
 #  results.
 #
 jspwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS
+#
+# For ElWiki
+# временно? :FVK:
+#elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS/ElWiki_WorkDir
+jspwiki.attachmentDir = /home/vfedorov/dev/dev_wikijsp/WS/pages_attachment 
 
 #
 #  ATTACHMENTS:
@@ -1082,12 +1087,6 @@ jspwiki.defaultprefs.timeformat.37=yyyyMMdd'T'HHmmss
 ### End of configuration file.
 
 #~~~ :FVK: ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-#
-# For ElWiki
-# временно?
-elwiki.workDir = /home/vfedorov/dev/dev_wiki/WikiRoot/ElWiki_WorkDir
-elwiki.attachmentDir = /home/vfedorov/dev/dev_wiki/WikiRoot/pages_attachment
 
 ## RenderingManager
 
