подключены политики elwiki; проверка OSGi policy. (draft версия)

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -109,12 +109,14 @@ jspwiki.fileSystemProvider.pageDir = /home/vfedorov/dev/dev_wiki/Temp/pages
 #  The working directory is used to cache things like Lucene search
 #  results.
 #
-jspwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS
+#jspwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS
+# old workDir -- /home/vfedorov/dev/dev_wiki/WikiRoot/ElWiki_WorkDir
+elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS 
 #
 # For ElWiki
 # временно? :FVK:
 #elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS/ElWiki_WorkDir
-jspwiki.attachmentDir = /home/vfedorov/dev/dev_wikijsp/WS/pages_attachment 
+elwiki.attachmentDir = /home/vfedorov/dev/dev_wikijsp/WS/pages_attachment 
 
 #
 #  ATTACHMENTS:
@@ -546,7 +548,7 @@ jspwiki.login.throttling=true
 #     someone manages to nab the cookie during this time, they can pretend to
 #     be that user.
 #  2) The mappings between cookies and users are written in your filesystem,
-#     in $jspwiki.workDir/logincookies.  Access to this directory means that
+#     in $elwiki.workDir/logincookies.  Access to this directory means that
 #     the ability to fake anyone in the wiki, so please make sure that only
 #     the proper admin has read access to this directory.
 #
