--- a/elwikijsp.root/bundles_4tests/org.elwiki.test.utils/preferences.ini
+++ b/elwikijsp.root/bundles_4tests/org.elwiki.test.utils/preferences.ini
@@ -282,7 +282,7 @@ jspwiki.cookieAssertions=true
 #     someone manages to nab the cookie during this time, they can pretend to
 #     be that user.
 #  2) The mappings between cookies and users are written in your filesystem,
-#     in $jspwiki.workDir/logincookies.  Access to this directory means that
+#     in $elwiki.workDir/logincookies.  Access to this directory means that
 #     the ability to fake anyone in the wiki, so please make sure that only
 #     the proper admin has read access to this directory.
 #
