--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/ini/jspwiki.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/ini/jspwiki.properties
@@ -104,7 +104,7 @@ jspwiki.usePageCache = true
 #  The working directory is used to cache things like Lucene search
 #  results.
 #
-#jspwiki.workDir =
+#elwiki.workDir =
 
 #
 #  ATTACHMENTS:
@@ -536,7 +536,7 @@ jspwiki.login.throttling=true
 #     someone manages to nab the cookie during this time, they can pretend to
 #     be that user.
 #  2) The mappings between cookies and users are written in your filesystem,
-#     in $jspwiki.workDir/logincookies.  Access to this directory means that
+#     in $elwiki.workDir/logincookies.  Access to this directory means that
 #     the ability to fake anyone in the wiki, so please make sure that only
 #     the proper admin has read access to this directory.
 #
