code edit: прямо указан ServiceRefs (для getSessionMonitor); приложение RAP активируется после создания ServiceRefs.

--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                OSGI-INF/
 additional.bundles = javax.servlet,\
-                     javax.servlet.jsp
+                     javax.servlet.jsp,\
+                     org.eclipse.rap.jface
