--- a/elwikijsp.root/bundles/org.elwiki.configuration/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                preferences.ini
 additional.bundles = org.eclipse.osgi,\
                      org.eclipse.core.runtime,\
-                     org.eclipse.jface
+                     org.eclipse.rap.jface
