--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -17,4 +17,5 @@ bin.includes = META-INF/,\
                page/
 additional.bundles = javax.servlet.jsp,\
                      org.elwiki.data,\
-                     jakarta.servlet-api
+                     jakarta.servlet-api,\
+                     org.eclipse.rap.jface
