--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
@@ -4,5 +4,5 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/
 additional.bundles = javax.servlet,\
-                     org.eclipse.jface,\
+                     org.eclipse.rap.jface,\
                      org.elwiki.configuration
