--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/
 additional.bundles = org.elwiki.data,\
-                     org.elwiki.configuration
+                     org.elwiki.configuration,\
+                     org.eclipse.rap.jface
