configuring POM files to create p2 repositories.

--- a/p2_repositories/.project
+++ b/p2_repositories/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>for-test-site</name>
+	<name>p2 repositories</name>
 	<comment></comment>
 	<projects>
 	</projects>
