--- a/p2_repositories/for-test-site/pom.xml
+++ b/p2_repositories/for-test-site/pom.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001 XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001 XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.reficio.rcp</groupId>
-	<artifactId>custom-p2-site</artifactId>
+	<artifactId>for-test-site</artifactId>
 	<packaging>pom</packaging>
-	<version>1.4.1-SNAPSHOT</version>
+	<name>For test site</name>
+	<description>For test site.</description>
+	<parent>
+		<groupId>p2.repositories</groupId>
+		<artifactId>p2.repositories.root</artifactId>
+		<version>1.0.0</version>
+		<relativePath>../</relativePath>
+	</parent>
 
-<repositories>
-    <repository>
-      <id>Repository</id>
-      <url>http://download.eclipse.org/technology/m2e/releases/latest/</url>
-    </repository>
- </repositories>
+	<repositories>
+		<repository>
+			<id>Repository</id>
+			<url>http://download.eclipse.org/technology/m2e/releases/latest/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -29,27 +33,19 @@
 							<artifacts>
 								<!-- specify your depencies here -->
 								<!-- groupId:artifactId:version -->
-				<artifact><id>org.mockito:mockito-core:4.2.0</id><source>true</source></artifact>
+								<artifact>
+									<id>org.mockito:mockito-core:4.2.0</id>
+									<source>true</source>
+								</artifact>
 							</artifacts>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.5.v20120716</version>
-				<configuration>
-					<scanIntervalSeconds>10</scanIntervalSeconds>
-					<webAppSourceDirectory>${basedir}/target/repository/</webAppSourceDirectory>
-					<webApp>
-						<contextPath>/site</contextPath>
-					</webApp>
-				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
-
 </project>
