Insert Users and Groups lists into bundle org.elwiki.authorize (workaround)

--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
@@ -5,7 +5,9 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                jspwiki.policy,\
-               freshcookies-security-0.60.jar
+               freshcookies-security-0.60.jar,\
+               users.json,\
+               groups.json
 additional.bundles = javax.servlet,\
                      javax.mail,\
                      org.elwiki.util,\
