setting up the placement of components relative to the working directory.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -111,12 +111,12 @@ jspwiki.fileSystemProvider.pageDir = /home/vfedorov/dev/dev_wiki/Temp/pages
 #
 #jspwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS
 # old workDir -- /home/vfedorov/dev/dev_wiki/WikiRoot/ElWiki_WorkDir
-elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS 
+elwiki.workDir = WS/ 
 #
 # For ElWiki
-# временно? :FVK:
+# temporary? :FVK:
 #elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS/ElWiki_WorkDir
-elwiki.attachmentDir = /home/vfedorov/dev/dev_wikijsp/WS/pages_attachment 
+elwiki.attachmentDir = WS/pages_attachment/ 
 
 #
 #  ATTACHMENTS:
