--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
@@ -2,7 +2,14 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               jars/lucene-analyzers-common-8.5.1.jar,\
+               jars/lucene-core-8.5.1.jar,\
+               jars/lucene-highlighter-8.5.1.jar,\
+               jars/lucene-memory-8.5.1.jar,\
+               jars/lucene-queries-8.5.1.jar,\
+               jars/lucene-queryparser-8.5.1.jar,\
+               jars/lucene-sandbox-8.5.1.jar
 additional.bundles = org.elwiki.data,\
                      org.elwiki.configuration,\
                      org.eclipse.rap.jface
