--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -13,8 +13,7 @@ bin.includes = META-INF/,\
                WEB-INF/,\
                sandler-0.5.jar,\
                freshcookies-security-0.60.jar,\
-               xmlrpc-2.0.1.jar,\
-               page/
+               xmlrpc-2.0.1.jar
 additional.bundles = javax.servlet.jsp,\
                      org.elwiki.data,\
                      jakarta.servlet-api,\
