--- a/TargetPlatform/.project
+++ b/TargetPlatform/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TargetPlatform</name>
+	<name>🖳TargetPlatform</name>
 	<comment></comment>
 	<projects>
 	</projects>
