add templates 'raw', 'reader'

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -658,9 +658,9 @@ jspwiki.aclManager = org.apache.wiki.auth.acl.DefaultAclManager
 #
 # InterWiki links
 #
-# The %s is replaced with the page reference (specify
-# multiple times to get multiple references).  Page references should
-# appear in format : [wiki:wikipage].
+# The %s is replaced with the page reference
+# (specify multiple times to get multiple references).
+# Page references should appear in format : [wiki:wikipage].
 #
 
 # This is the JSPWiki home.  In future, JSPWiki will probably rely on this
@@ -668,15 +668,14 @@ jspwiki.aclManager = org.apache.wiki.auth.acl.DefaultAclManager
 node.interWikiRefs/JSPWiki = http://jspwiki-wiki.apache.org/Wiki.jsp?page=%s
 
 # Here's how you can have directly links to the JSPWiki editor.
-# Now you can put a hyperlink for editing "MainPage" by making
-# a link [Edit:MainPage].
-node.interWikiRefs/Edit = Edit.jsp?page=%s
+# Now you can put a hyperlink for editing "MainPage" by making a link [Edit:MainPage].
+node.interWikiRefs/Edit = cmd.edit?pageId=%s
 
 # A link to the raw wikimarkup of the page : [Raw:MainPage]
-node.interWikiRefs/Raw = Wiki.jsp?page=%s&skin=raw
+node.interWikiRefs/Raw = cmd.view?pageId=%s&skin=raw
 
 # A link to the reader view of the page (no leftmenu, fit for printing) : [Reader:MainPage]
-node.interWikiRefs/Reader = Wiki.jsp?page=%s&skin=reader
+node.interWikiRefs/Reader = cmd.view?pageId=%s&skin=reader
 
 #  A link to a Wiki Group, defined in the Group database.
 node.interWikiRefs/Group = Group.jsp?group=%s
@@ -708,7 +707,7 @@ node.interWikiRefs/Doc = http://jspwiki-wiki.apache.org/Wiki.jsp?page=%s
 # JIRA Issue Tracker
 node.interWikiRefs/JIRA = https://issues.apache.org/jira/browse/JSPWIKI-%s
 
-node.interWikiRefs/keys=Doc:Edit:Google:Group:JIRA:JSPWiki:Location:MeatballWiki:RSS:Raw:Reader:TWiki:WikiWikiWeb:Wikipedia
+node.interWikiRefs/keys=Edit:Raw:Reader:Doc:Google:Group:JIRA:JSPWiki:Location:MeatballWiki:RSS:TWiki:WikiWikiWeb:Wikipedia
 
 
 ############################################################################
