move jspwiki TLD file; change 'page' attribute of InsertPageTag.

--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -1,16 +1,15 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
+bin.includes = .,\
+               META-INF/,\
                OSGI-INF/,\
+               WEB-INF/,\
                resources/,\
+               templates/,\
+               webapp/,\
                plugin.xml,\
-               taglibs-elwiki-2.3.jar,\
                taglibs-standard-impl-1.2.5.fixed.jar,\
                taglibs-standard-spec-1.2.5.jar,\
-               webapp/,\
-               templates/,\
-               WEB-INF/,\
                sandler-0.5.jar,\
                freshcookies-security-0.60.jar,\
                xmlrpc-2.0.1.jar
