fix: redirecting back to the current page after logging in.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -554,7 +554,7 @@ jspwiki.login.throttling=true
 #
 #  By default, cookie authentication is off.
 #
-#jspwiki.cookieAuthentication=false
+jspwiki.cookieAuthentication=false
 
 #
 #  Defines how many days the cookies are kept, and how often the people have to log in.
