changed: favicon, appname, variable name.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -34,7 +34,7 @@ eclipse.preferences.version=1
 #  the actual web name (http://my.com/mywiki) of the application, but usually
 #  it is the same.
 #
-jspwiki.applicationName = JSPWiki
+jspwiki.applicationName = ElWiki
 
 #
 #  Which page provider class to use.  Possibilities are:
