porting quick search, added servlet "/ajax/*".

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
@@ -18,7 +18,7 @@
 #minimizeEnabled=false
 debug=true
 
-# :FVK: - variant 1 (it was commented)
+# :FVK: - variant 1 (it was commented, in original)
 #preProcessors=cssUrlRewriting,cssImport,semicolonAppender
 #postProcessors=lessCss,yuiCssMin,uglifyJs
 
