remove: duplicate definitions of configuration: workdir, template_name, store_user_name.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -116,7 +116,7 @@ elwiki.workDir = WS/
 # For ElWiki
 # temporary? :FVK:
 #elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS/ElWiki_WorkDir
-elwiki.attachmentDir = WS/pages_attachment/ 
+elwiki.attachmentDir = pages_attachment/ 
 
 #
 #  ATTACHMENTS:
