add: WikiScope manager.

--- a/elwikijsp.root/bundles/org.elwiki.resources/resources/.gitignore
+++ b/elwikijsp.root/bundles/org.elwiki.resources/resources/.gitignore
@@ -2,4 +2,9 @@
 /images/
 /scripts/*.js
 /scripts/*.xml
+!/scripts/ajax.js
+!/scripts/tree.js
+!/scripts/tree.js.map
+!/scripts/TreeScope.js
+!/scripts/tree.css
 /templates/
