beautify MANIFEST.MF dependencies - removed versions of ElWiki bundles.

--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.editor/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.editor/build.properties
@@ -4,3 +4,4 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                ini/
+additional.bundles = org.elwiki.util
