beautify: removing duplicate JSP properties files.

--- a/elwikijsp.root/bundles/org.elwiki.main/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/build.properties
@@ -8,9 +8,7 @@ bin.includes = META-INF/,\
                freshcookies-security-0.60.jar,\
                org.suigeneris.jrcs.diff-0.4.2.jar,\
                ini/,\
-               CoreResources/,\
-               plugin/,\
-               templates/
+               plugin/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
                      javax.mail,\
