--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default.properties
@@ -322,7 +322,7 @@ actions.comment.title=Add Comment
 actions.addcommenttoparent=Add Comment to parent page
 actions.upload=Attach File
 actions.info=Info
-actions.info.title=Additonal Page Info and Version history [ i ]
+actions.info.title=Additional Page Info and Version history [ i ]
 actions.prefs=User Preferences
 actions.prefs.title=Manage your preferences [ p ]
 actions.groups=Groups
@@ -330,7 +330,7 @@ actions.editgroup=Edit group
 actions.deletegroup=Delete group
 actions.viewgroup=View group
 actions.creategroup=Create group
-actions.creategroup.title=Create new authorisation group
+actions.creategroup.title=Create new authorization group
 actions.login=Log in
 actions.login.title=Log in or Register as new user
 actions.logout=Log out
@@ -525,6 +525,20 @@ upload.info=In order to upload a new attachment to this page, please use the fol
 upload.submit=Upload
 upload.done=If you are done uploading, you may wish to return to {0}
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=Select display topics
+scope.save.submit=Set Scope
+scope.cancel.submit=Cancel
+scope.show.topics=Displayed topics
+scope.btn.all=All topics
+scope.btn.selected=Selected topics
+scope.label.selection=Selected topics
+scope.btn.new=New...
+scope.btn.edit=Edit...
+scope.btn.remove=Remove
+scope.selection.ok=Select topics
+scope.selection.cancel=Cancel
 
 # ViewTemplate.jsp
 # 0 : Application Name
