removing support of RAP.

--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                OSGI-INF/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
-                     org.eclipse.rap.jface
+                     org.eclipse.jface
