--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -16,4 +16,4 @@ bin.includes = .,\
 additional.bundles = javax.servlet.jsp,\
                      org.elwiki.data,\
                      jakarta.servlet-api,\
-                     org.eclipse.rap.jface
+                     org.eclipse.jface
