--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
@@ -12,4 +12,4 @@ bin.includes = META-INF/,\
                jars/lucene-sandbox-8.5.1.jar
 additional.bundles = org.elwiki.data,\
                      org.elwiki.configuration,\
-                     org.eclipse.rap.jface
+                     org.eclipse.jface
