--- a/elwikijsp.root/bundles_managers/org.elwiki.commandresolver/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.commandresolver/build.properties
@@ -3,5 +3,5 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
-additional.bundles = org.eclipse.rap.jface,\
+additional.bundles = org.eclipse.jface,\
                      org.elwiki.configuration
