--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
@@ -7,5 +7,5 @@ bin.includes = META-INF/,\
                OSGI-INF/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
-                     org.eclipse.rap.jface,\
+                     org.eclipse.jface,\
                      org.elwiki.configuration
