--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
@@ -5,5 +5,5 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                schema/
-additional.bundles = org.eclipse.rap.jface,\
+additional.bundles = org.eclipse.jface,\
                      org.elwiki.configuration
