switching to usage p2 repository 2022-12

--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -4,6 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/
-additional.bundles = javax.servlet,\
-                     javax.servlet.jsp,\
+additional.bundles = jakarta.servlet-api,\
+                     javax.servlet.jsp-api,\
                      org.eclipse.jface
