--- a/elwikijsp.root/bundles/org.elwiki.main/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/build.properties
@@ -9,8 +9,8 @@ bin.includes = META-INF/,\
                org.suigeneris.jrcs.diff-0.4.2.jar,\
                ini/,\
                plugin/
-additional.bundles = javax.servlet,\
-                     javax.servlet.jsp,\
+additional.bundles = jakarta.servlet-api,\
+                     javax.servlet.jsp-api,\
                      javax.mail,\
                      org.slf4j.api,\
                      org.elwiki.util
