--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -13,7 +13,7 @@ bin.includes = .,\
                sandler-0.5.jar,\
                freshcookies-security-0.60.jar,\
                xmlrpc-2.0.1.jar
-additional.bundles = javax.servlet.jsp,\
-                     org.elwiki.data,\
-                     jakarta.servlet-api,\
-                     org.eclipse.jface
+additional.bundles = jakarta.servlet-api,\
+                     javax.servlet.jsp-api,\
+                     org.eclipse.jface,\
+                     org.elwiki.data
