--- a/elwikijsp.root/bundles/org.elwiki.util/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.util/build.properties
@@ -3,5 +3,5 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                ini/
-additional.bundles = javax.servlet,\
+additional.bundles = jakarta.servlet-api,\
                      javax.mail
