--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
@@ -5,7 +5,7 @@ bin.includes = META-INF/,\
                ini/,\
                xmlrpc-2.0.1.jar,\
                OSGI-INF/
-additional.bundles = javax.servlet,\
-                     javax.servlet.jsp,\
+additional.bundles = jakarta.servlet-api,\
+                     javax.servlet.jsp-api,\
                      org.eclipse.jface,\
                      org.elwiki.configuration
