--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
@@ -3,6 +3,6 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
-additional.bundles = javax.servlet,\
+additional.bundles = jakarta.servlet-api,\
                      org.eclipse.jface,\
                      org.elwiki.configuration
