--- a/elwikijsp.root/bundles/org.elwiki.core.plugins/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.core.plugins/build.properties
@@ -3,8 +3,8 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml
-additional.bundles = javax.servlet,\
-                     javax.servlet.jsp,\
+additional.bundles = jakarta.servlet-api,\
+                     javax.servlet.jsp-api,\
                      javax.mail,\
                      org.slf4j.api,\
                      org.elwiki.util
