--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
@@ -8,7 +8,7 @@ bin.includes = META-INF/,\
                freshcookies-security-0.60.jar,\
                users.json,\
                groups.json
-additional.bundles = javax.servlet,\
+additional.bundles = jakarta.servlet-api,\
                      javax.mail,\
                      org.elwiki.util,\
                      org.elwiki.api,\
