setting up product creation.

--- a/elwikijsp.root/features/pom.xml
+++ b/elwikijsp.root/features/pom.xml
@@ -18,7 +18,10 @@
 	<modules>
 		<module>org.elwiki.feature</module>
 		<module>jsp.bridge.feature</module>
+		<module>org.elwiki.platform.feature</module>
+<!--
 		<module>elwiki.test.feature</module>
 		<module>elwiki.test_environment.feature</module>
+-->
 	</modules>
 </project>
