--- a/elwikijsp.root/bundles/org.elwiki.resources/pom.xml
+++ b/elwikijsp.root/bundles/org.elwiki.resources/pom.xml
@@ -3,6 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.elwiki.resources</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 	<name>[bundle] Resources</name>
 
@@ -138,7 +139,7 @@
 											tycho-packaging-plugin
 										</artifactId>
 										<versionRange>
-											[2.7.1,)
+											[2.7.4,)
 										</versionRange>
 										<goals>
 											<goal>validate-id</goal>
@@ -157,7 +158,7 @@
 											tycho-compiler-plugin
 										</artifactId>
 										<versionRange>
-											[2.7.1,)
+											[2.7.4,)
 										</versionRange>
 										<goals>
 											<goal>compile</goal>
