--- a/elwikijsp.root/tests/org.elwiki.tests/build.properties
+++ b/elwikijsp.root/tests/org.elwiki.tests/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .
-additional.bundles = javax.servlet,\
-                     org.junit.jupiter.api,\
-                     org.junit.platform.suite.api,\
+additional.bundles = jakarta.servlet-api,\
+                     junit-jupiter-api,\
+                     junit-platform-suite-api,\
                      org.junit
