beautify code. (during the jsp error support study)

--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -16,4 +16,5 @@ bin.includes = .,\
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      org.eclipse.jface,\
-                     org.elwiki.data
+                     org.elwiki.data,\
+                     org.apache.jasper.glassfish
